# easy_task

./: .gitignore  README.md  README.org  requirements.txt  run_task.py  run_task_demo.py  setup.cfg  setup.py
base/: __init__.py  base_result.py  base_setting.py  base_task.py  base_utils.py
examples/: run_cls_task.py  run_ner_task.py
module/: __init__.py  function.py  model.py  task.py
src/easy_task/: __init__.py
src/easy_task/base/: __init__.py  base_result.py  base_setting.py  base_task.py  base_utils.py
src/easy_task/base_module/: __init__.py  base_setting.py  base_task.py  base_utils.py
src/easy_task/module/: __init__.py  function.py  model.py  model_for_ner.py  result_for_cls.py  result_for_event.py  result_for_ner.py  task.py  task_for_cls.py  task_for_event.py  task_for_ner.py  task_for_seq_tag.py  utils.py  utils_for_cls.py  utils_for_ner.py  utils_for_seq_tag.py
src/easy_task/task_module/: __init__.py  model_for_cls.py  model_for_ner.py  result_for_cls.py  result_for_ner.py  task_for_cls.py  task_for_ner.py
src/easy_work/base/: base_utils.py
src/easy_work/module/: task.py
task_config/: cls_config.yml  config.yml  event_config.yml  ner_config.yml
