[metadata]
name = easy_task
version = 0.0.4
author = black_tears
author_email = 21860437@zju.edu.cn
description = make you easy to build deeplearning task
long_description = file: README.org
long_description_content_type = text/markdown
url = https://github.com/AI-confused/easy_task
project_urls =
    Bug Tracker = https://github.com/AI-confused/easy_task/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src